--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "cross-env": "^7.0.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "express-winston": "^4.2.0",
+    "nodemon": "^2.0.4",
+    "winston": "^3.3.3"
   }
 }
