--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-winston": "^4.2.0",
     "nodemon": "^2.0.4",
+    "request-ip": "^2.1.3",
     "winston": "^3.3.3"
   }
 }
