--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-winston": "^4.2.0",
+    "googleapis": "^92.0.0",
     "request-ip": "^2.1.3",
     "winston": "^3.3.3"
   }
