--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-winston": "^4.2.0",
+    "geoip-lite": "^1.4.3",
     "googleapis": "^92.0.0",
+    "moment-timezone": "^0.5.34",
     "request-ip": "^2.1.3",
     "winston": "^3.3.3"
   }
